# zeared

./: README.md  pyproject.toml
bench/: bench_async.py  bench_throughput.py  bench_wire.py
docs/: _codec.md  _factories.md  _mode.md  _module_class.md  _prefix_index.md  _release.md  _session.md  async_.md  batch.md  config.md  errors.md  meta.md  publisher.md  retention.md  watchdog.md
docs/_managed_session/: _managed_session.md
docs/_reconnect/: _reconnect.md
docs/_template/: _template.md
docs/message/: message.md
docs/overview/: architecture.md  benchmarks.md  lifecycle.md
docs/presence/: presence.md
docs/subscriber/: subscriber.md
tests/: conftest.py  test__factories.py  test__mode.py  test__module_class.py  test__release.py  test_async_.py  test_batch.py  test_codec.py  test_config.py  test_errors.py  test_meta.py  test_prefix_index.py  test_publisher.py  test_retention.py  test_session.py  test_watchdog.py
tests/_managed_session/: test__helpers.py  test__managed_session.py  test__on_reconnect_handle.py  test__on_reconnect_mixin.py  test__zenoh_api_mixin.py  test_init.py
tests/_reconnect/: test__reconnect.py  test__restore.py  test_init.py
tests/_template/: test__template.py  test__templates.py  test_init.py  test_multi_segment.py
tests/message/: test__message_async.py  test__message_send.py  test__message_subscribe.py  test_init.py  (+4 more)
zeared/: __init__.py  _codec.py  _factories.py  _mode.py  _module_class.py  _prefix_index.py  _release.py  _session.py  async_.py  batch.py  config.py  errors.py  meta.py  publisher.py  retention.py  watchdog.py
(+40 files in other folders)
