[project]
name = "zeared"
version = "0.1.0"
description = "A seared-flavored wrapper around Zenoh"
authors = [
    { name = "Benj Wiswell", email = "benjwiswell@gmail.com" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "eclipse-zenoh>=1.9.0",
    "msgpack>=1.1.2",
    "seared>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.uv.sources]
seared = { git = "https://github.com/bwiswell/seared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zeared"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
